--- a/SuperFXContent/SuperFXContent.csproj
+++ b/SuperFXContent/SuperFXContent.csproj
@@ -35,6 +35,10 @@
     <Compile Include="ModelData\OBJData.cs" />
     <Compile Include="ModelData\ObjProcessor.cs" />
     <Compile Include="ModelData\PixelModelWriter.cs" />
+    <Compile Include="SpriteData\SpriteAnimContentImporter.cs" />
+    <Compile Include="SpriteData\SpriteAnimContentProcessor.cs" />
+    <Compile Include="SpriteData\SpriteData.cs" />
+    <Compile Include="SpriteData\SpriteAnimContentWriter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -44,6 +48,8 @@
     <Reference Include="MonoGame.Framework.Content.Pipeline">
       <HintPath>..\packages\MonoGame.Framework.Content.Pipeline.Portable.3.2.99.1-Beta\lib\portable-net45+win+wpa81+Xamarin.iOS10+MonoAndroid10+MonoTouch10\MonoGame.Framework.Content.Pipeline.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -53,6 +59,7 @@
     <Folder Include="ModelData\" />
     <Folder Include="Content\" />
     <Folder Include="Content\Models\" />
+    <Folder Include="SpriteData\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Models\arwing_snes_highpoly_original.obj" />
